samples/_failures_safe/1761509761_b1c2ba_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_e244c05f.c: In function ‘main’:
./samples/SAFE/__tmp_e244c05f.c:166:5: error: expected declaration or statement at end of input
  166 |     }
      |     ^
